# task-tracker

./: README.md  pyproject.toml
pythonProject/: app.py  index.html
src/: deadline_task.py  exceptions.py  periodic_task.py  print_mixin.py  task.py  task_iterator.py  user.py  utils.py
tests/: conftest.py  test_deadline_task.py  test_periodic_task.py  test_print_mixin.py  test_task.py  test_user.py
